# Copyright (c) 2026 CUT and HES-SO
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# 
# SPDX-License-Identifier: Apache-2.0


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cutsimulator"
version = "0.1.0"
description = "Kubernetes workload simulator"
readme = "Readme.md"
requires-python = ">=3.8"
authors = [{name = "CUT"}]
license = {text = "MIT"}
dependencies = [
    "kubernetes>=25.3.0",
    "PyYAML>=5.4",
    "numpy>=1.21.0",
    "torch>=1.13.0",
    "pandas>=1.3.0",
    "pettingzoo>=1.24.0",
    "gymnasium>=0.26.0",
    "typing_extensions>=4.0.0"
]

[project.scripts]
cluster-controller = "scripts.cluster_controller:main"
simulation-controller = "scripts.simulation_controller:main"
training-controller = "scripts.training_controller:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cutsimulator*"]

[tool.setuptools.package-data]
cutsimulator = ["utils/utils_models/*"]
